--- a/BlogArticles/blog1.html
+++ b/BlogArticles/blog1.html
@@ -5,7 +5,54 @@
     <link rel="icon" type="image/svg+xml" href="../img/logosh.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Avantages du massage régulier - Astuces & Blog</title>
-    <link rel="stylesheet" href="../style.css" />
+    <style>
+        
+body {
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+}
+.container {
+    max-width: 960px;
+    margin: 40px auto;
+    padding: 30px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+h1 {
+    font-size: 2em;
+    color: #333;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.blog-image {
+    width: 100%;
+    max-height: 400px;
+    object-fit: cover;
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+.blog-content {
+    line-height: 1.6;
+    color: #555;
+}
+.navigation {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid #eee;
+    padding-top: 20px;
+}
+.nav-link {
+    color: #d81b60;
+    text-decoration: none;
+}
+.nav-link:hover {
+    text-decoration: underline;
+}
+    </style>
 </head>
 <body>
     <div class="container">
