update blog styles & services prices

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="img/logosh.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Safe Haven est votre sanctuaire de bien-être et de ressourcement partout au Bénin  " />
-    <meta name="keywords" content="bonheur, bien-être, santé, massage, soin, soin corporel, pédicure, manicure, salon de massage cotonou, Bénin, Safe Haven" />    
+    <meta name="keywords" content="bonheur, bien-être, santé, massage, soin, soin corporel, pédicure, manicure, salon de massage cotonou, Bénin, Safe Haven institut" />    
     <title>Safe Haven - Le bonheur à domicile</title>
   </head>
   <body>
